hopefully fixed CSS on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,7 +89,7 @@
 strong {
   color: black;
 }
-@media screen and (width<486px) {
+@media screen and (287px <width <486px) {
   .heading .help {
     right: 0px;
     top: 0px;
